# grailsproject

./: LICENSE  README.md  grailsproject.cabal  grailsproject.hs
Grails/Project/: BuildConfig.hs  Main.hs  Output.hs  Util.hs
src/: Main.hs
src/Grails/: Files.hs  Output.hs  Project.hs  Types.hs
src/Grails/Parser/: BuildConfig.hs  Common.hs  PluginDesc.hs  Properties.hs
src/Grails/Project/: BuildConfig.hs
src/Grails/Project/Parser/: BuildConfig.hs
test/: BuildConfig-nested-blocks.groovy  BuildConfig-one-plugin.groovy  Test.hs  run.hs
test/Tests/: BuildConfig.hs
test/Tests/Parser/: BuildConfig.hs  PluginDesc.hs  Properties.hs  Support.hs
test/resource/buildconfig/: block-comment  empty-plugins  line-comment  multiple  version-string
test/resource/plugindesc/: simple
test/resource/properties/: only-comments  proper
