name:                grailsproject
version:             0.1
synopsis:            Provide information about a grails project.
homepage:            https://github.com/mbezjak/grailsproject
bug-reports:         https://github.com/mbezjak/grailsproject/issues
license:             MIT
license-file:        LICENSE
copyright:           2012, 2013 Miro Bezjak
author:              Miro Bezjak <bezjak.miro@gmail.com>
maintainer:          Miro Bezjak <bezjak.miro@gmail.com>
category:            Development
build-type:          Simple
cabal-version:       >=1.8
extra-source-files:  README.md

executable grailsproject
  hs-source-dirs:    src
  main-is:           Main.hs
  build-depends:
    base <5,
    mtl >2.0,
    filepath ==1.3.*,
    parsec ==3.1.*,
    directory ==1.2.*

test-suite test
  type:              exitcode-stdio-1.0
  hs-source-dirs:    src, test
  main-is:           run.hs
  build-depends:
    base,
    mtl,
    parsec,
    directory,
    HUnit,
    test-framework,
    test-framework-hunit

source-repository head
 type:     git
 location: https://github.com/mbezjak/grailsproject
